--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,10 @@
         </init-param>
     </servlet>
 
+    <servlet-mapping>
+        <servlet-name>config</servlet-name>
+        <url-pattern>/config</url-pattern>
+    </servlet-mapping>
     <servlet>
         <servlet-name>jdbc</servlet-name>
         <servlet-class>com.example._2020211001001108leihou.week4.MysqlDemoServlet</servlet-class>
@@ -47,10 +51,6 @@
     <servlet-mapping>
         <servlet-name>jdbc</servlet-name>
         <url-pattern>/jdbc</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>config</servlet-name>
-        <url-pattern>/config</url-pattern>
     </servlet-mapping>
     <servlet>
         <servlet-name>register</servlet-name>
@@ -69,4 +69,7 @@
         <filter-name>CharacterEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+    </welcome-file-list>
 </web-app>
