--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,72 +3,111 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <!--set 4 context param =name value -->
     <context-param>
         <param-name>driver</param-name>
-        <param-value>com.mysql.jdbc.Driver</param-value>
+        <param-value>com.LeiHou.week4.JDBCDemoServlet</param-value>
     </context-param>
     <context-param>
         <param-name>url</param-name>
-        <param-value>jdbc:mysql://localhost:3306/usrdb</param-value>
+        <param-value>jdbc:sqlserver://localhost:1433;database=userdb;encrypt=false</param-value>
     </context-param>
     <context-param>
-        <param-name>usr</param-name>
-        <param-value>root</param-value>
+        <param-name>username</param-name>
+        <param-value>sa</param-value>
     </context-param>
     <context-param>
         <param-name>password</param-name>
-        <param-value>123456</param-value>
+        <param-value>admin123456789</param-value>
     </context-param>
+
+
+
+    <!-- add code about  new servlet(week2)-->
     <servlet>
-        <servlet-name>anyName</servlet-name>
-        <servlet-class>com.example._2020211001001108leihou.week2.HelloworldServlet</servlet-class>
+        <servlet-name>week2</servlet-name><!--give any name-->
+        <servlet-class>com.LeiHou.week2.HelloWorldServlet</servlet-class><!--package + name of servlet class -->
     </servlet>
-    <servlet-mapping>
-        <servlet-name>anyName</servlet-name>
-        <url-pattern>/hello</url-pattern>
-    </servlet-mapping>
+    <!--<servlet>
+        <servlet-name>LifeCycleServlet</servlet-name>
+        <servlet-class>com.LeiHou.week3.LifeCycleServlet</servlet-class>
+    </servlet>-->
+    <!--automatic code-->
     <servlet>
-        <servlet-name>config</servlet-name>
-        <servlet-class>com.example._2020211001001108leihou.week4.ConfigDemoServlet</servlet-class>
+        <servlet-name>RegisterServlet</servlet-name>
+        <servlet-class>com.LeiHou.week3.RegisterServlet</servlet-class>
+    </servlet>
+    <!--
+    <servlet>
+        <servlet-name>JDBCDemoServlet</servlet-name>
+        <servlet-class>com.LeiHou.week4.JDBCDemoServlet</servlet-class>
+        <init-param>
+            <param-name>driver</param-name>
+            <param-value>com.microsoft.sqlserver.jdbc.SQLServerDriver</param-value>
+        </init-param>
+        <init-param>
+            <param-name>url</param-name>
+            <param-value>jdbc:sqlserver://localhost:1433;database=userdb;encrypt=false</param-value>
+        </init-param>
+        <init-param>
+            <param-name>username</param-name>
+            <param-value>sa</param-value>
+        </init-param>
+        <init-param>
+            <param-name>password</param-name>
+            <param-value>admin123456789</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>-->
+    <servlet>
+        <servlet-name>ConfigDemoServlet</servlet-name>
+        <servlet-class>com.LeiHou.week4.ConfigDemoServlet</servlet-class>
         <init-param>
             <param-name>name</param-name>
             <param-value>LeiHou</param-value>
         </init-param>
         <init-param>
-            <param-name>id</param-name>
+            <param-name>studentId</param-name>
             <param-value>2020211001001108</param-value>
         </init-param>
     </servlet>
+    <servlet>
+        <servlet-name>SearchServlet</servlet-name>
+        <servlet-class>com.LeiHou.week6.SearchServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SearchServlet</servlet-name>
+        <url-pattern>/search</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
-        <servlet-name>config</servlet-name>
+        <servlet-name>week2</servlet-name>
+        <url-pattern>/hello</url-pattern><!--url must start with / -->
+    </servlet-mapping>
+    <!-- 这里的/hello就相当于是com.LeiHou.week2.HelloWorldServlet-->
+   <!-- <servlet-mapping>
+        <servlet-name>LifeCycleServlet</servlet-name>
+        <url-pattern>/life</url-pattern>
+        &lt;!&ndash; 这里的/life==LifeCycleServlet==com.LeiHou.week3.LifeCycleServlet&ndash;&gt;
+    </servlet-mapping>-->
+    <servlet-mapping>
+        <servlet-name>RegisterServlet</servlet-name>
+        <url-pattern>/register</url-pattern><!--write this url in action-->
+    </servlet-mapping>
+    <!--
+    <servlet-mapping>
+        <servlet-name>JDBCDemoServlet</servlet-name>
+        <url-pattern>/jdbc</url-pattern>
+    </servlet-mapping>-->
+    <servlet-mapping>
+        <servlet-name>ConfigDemoServlet</servlet-name>
         <url-pattern>/config</url-pattern>
     </servlet-mapping>
-    <servlet>
-        <servlet-name>jdbc</servlet-name>
-        <servlet-class>com.example._2020211001001108leihou.week4.MysqlDemoServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>jdbc</servlet-name>
-        <url-pattern>/jdbc</url-pattern>
-    </servlet-mapping>
-    <servlet>
-        <servlet-name>register</servlet-name>
-        <servlet-class>com.example._2020211001001108leihou.week3.register</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>register</servlet-name>
-        <url-pattern>/register</url-pattern>
-    </servlet-mapping>
-    <!--    -->
-    <filter>
-        <filter-name>CharacterEncodingFilter</filter-name>
-        <filter-class>com.example._2020211001001108leihou.Servlet.Filter.characterEncodingFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>CharacterEncodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <listener>
+        <listener-class>com.LeiHou.week6.JDBCServletContextListener</listener-class>
+    </listener>
+    
     <welcome-file-list>
         <welcome-file>home</welcome-file>
     </welcome-file-list>
